[package]
name = "actix-sqlite-tmp"
version = "0.1.0"
authors = ["Yaser Farhan <yaser.syed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
colored = "2.0.0"
config = "0.11.0"
serde = "1.0.125"
serde_derive = "1.0.125"
